Fix Mobile miniscreen: Drag handle not visible in long checklist item text.
Thanks to xet7 !

Fixes #3402

--- a/client/components/cards/checklists.styl
+++ b/client/components/cards/checklists.styl
@@ -158,6 +158,8 @@ textarea.js-add-checklist-item, textarea.js-edit-checklist-item
 
   span.fa.checklistitem-handle
     float: right
+    padding-right: 20px
+    padding-top: 6px
 
 .js-delete-checklist-item
   margin: 0 0 0.5em 1.33em
